--- a/Frontend/GlassHub/GlassHubApp/static/style_alarmes.css
+++ b/Frontend/GlassHub/GlassHubApp/static/style_alarmes.css
@@ -24,10 +24,6 @@ header {
     flex: 0 1 auto;
 }
 
-.menu-icon {
-    flex: 1;
-}
-
 .menu-toggle {
     font-size: 20px;
     cursor: pointer;
@@ -88,7 +84,7 @@ header {
     background-color: #424242; 
     color: white;
     border-radius: 5px; 
-    font-size: 14px; 
+    font-size: 16px; 
     margin-bottom: 10px; 
     color: #FFFFFF;
     justify-content: center; 
@@ -100,16 +96,60 @@ header {
     background-color: #616161; 
 }
 
-.slider-menu ul li::after {
-    content: "\25BC"; 
-    font-size: 12px; 
-    color: white;
-    margin-left: 10px; 
-}
-
 .slider-menu ul li a {
     color: #FFFFFF; 
     text-decoration: none; 
     width: 100%; 
 }
 
+/* Alarme Section */
+.alarm-section {
+    padding: 20px;
+}
+
+.alarm-section h1 {
+    background-color: #CCCCCC;
+    padding: 15px;
+    font-size: 24px;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+/* Estilos para centralizar a tabela */
+table {
+    margin: 0 auto;
+    width: 90%;
+    border-collapse: collapse;
+    background-color: #fff;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+}
+
+th, td {
+    padding: 18px 20px; 
+    text-align: center;
+    border: 1px solid #ddd;
+    font-size: 18px; 
+}
+
+th {
+    background-color: #FFB41C;  
+    color: white;
+    font-size: 20px;  
+}
+
+td input[type="text"] {
+    width: 100%;
+    padding: 12px;  
+    font-size: 16px; 
+}
+
+/* Tornando a tabela responsiva */
+@media (max-width: 768px) {
+    table {
+        width: 100%;
+    }
+
+    td input[type="text"] {
+        width: 90%;
+    }
+}
