--- a/Frontend/GlassHub/GlassHubApp/templates/parametrizacao.html
+++ b/Frontend/GlassHub/GlassHubApp/templates/parametrizacao.html
@@ -55,6 +55,31 @@
                     <td><input type="number" value="20"></td>
                     <td><input type="number" value="50"></td>
                 </tr>
+                <tr class="draggable-row">
+                    <td><input type="text" value="Processo 3" readonly></td>
+                    <td><input type="number" value="20"></td>
+                    <td><input type="number" value="50"></td>
+                </tr>
+                <tr class="draggable-row">
+                    <td><input type="text" value="Processo 4" readonly></td>
+                    <td><input type="number" value="20"></td>
+                    <td><input type="number" value="50"></td>
+                </tr>
+                <tr class="draggable-row">
+                    <td><input type="text" value="Processo 5" readonly></td>
+                    <td><input type="number" value="20"></td>
+                    <td><input type="number" value="50"></td>
+                </tr>
+                <tr class="draggable-row">
+                    <td><input type="text" value="Processo 6" readonly></td>
+                    <td><input type="number" value="20"></td>
+                    <td><input type="number" value="50"></td>
+                </tr>
+                <tr class="draggable-row">
+                    <td><input type="text" value="Processo 7" readonly></td>
+                    <td><input type="number" value="20"></td>
+                    <td><input type="number" value="50"></td>
+                </tr>
                 <!-- Continue com as demais linhas -->
             </tbody>
         </table>
