--- a/Frontend/GlassHub/GlassHubApp/static/style_cadastro.css
+++ b/Frontend/GlassHub/GlassHubApp/static/style_cadastro.css
@@ -113,18 +113,69 @@ header {
     width: 100%; 
 }
 
-/* Grid layout */
-.grid-container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 30px;
-    padding: 20px;
+
+.form-container {
+    background-color: #FFFFFF;
+    padding: 40px;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    width: 80%; 
+    margin: 40px auto;
 }
 
-.grid-item {
-    background-color: #E9E9E9E9;
+h2 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+form {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.row {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 45%;
+}
+
+label {
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+input {
+    padding: 10px;
     border: 1px solid #BDBDBD;
-    border-radius: 8px;
-    padding: 20px;
-    height: 200px;
+    border-radius: 4px;
+    box-sizing: border-box;
+    width: 100%;
+}
+
+.button-group {
+    display: flex;
+    justify-content: flex-end;
+    gap: 20px;
+    width: 100%;
+}
+
+.edit-button, .save-button {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.edit-button {
+    background-color: #D3D3D3;
+}
+
+.save-button {
+    background-color: #4CAF50;
+    color: white;
+}
+
+.save-button:hover {
+    background-color: #45a049;
 }
