--- a/Frontend/GlassHub/GlassHubApp/static/style_alarmes.css
+++ b/Frontend/GlassHub/GlassHubApp/static/style_alarmes.css
@@ -52,18 +52,18 @@ header {
 .slider-menu {
     position: fixed;
     top: 68px;
-    left: -200px;
+    left: -200px; 
     width: 200px;
     height: 100%;
     background-color: #FFB41C;
-    transition: left 0.3s ease;
+    transition: left 0.3s ease; 
     align-items: center; 
     justify-content: center;
     overflow: hidden; 
 }
 
 .slider-menu.open {
-    left: 0;
+    left: 0; 
 }
 
 .slider-menu ul {
@@ -84,7 +84,7 @@ header {
     background-color: #424242; 
     color: white;
     border-radius: 5px; 
-    font-size: 16px; 
+    font-size: 14px; 
     margin-bottom: 10px; 
     color: #FFFFFF;
     justify-content: center; 
@@ -94,6 +94,13 @@ header {
 
 .slider-menu ul li:hover {
     background-color: #616161; 
+}
+
+.slider-menu ul li::after {
+    content: "\25BC"; 
+    font-size: 12px; 
+    color: white;
+    margin-left: 10px; 
 }
 
 .slider-menu ul li a {
