--- a/Projeto/Frontend/GlassHub/GlassHubApp/static/style_dashbord.css
+++ b/Projeto/Frontend/GlassHub/GlassHubApp/static/style_dashbord.css
@@ -123,14 +123,15 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: calc(100% - 45px); 
     height: 200px;
     background-color: #E9E9E9E9;
+    margin: 0 0 20px 20px; 
 }
 
 .banner-img {
-    max-width: 100%;
-    height: auto;
+    max-width: calc(100% - 45px); 
+    height: auto; 
 }
 
 /* Grid layout */
