--- a/Projeto/Frontend/GlassHub/GlassHubApp/static/style_dashbord.css
+++ b/Projeto/Frontend/GlassHub/GlassHubApp/static/style_dashbord.css
@@ -1,3 +1,8 @@
+html, body {
+    height: 100%;   
+    overflow: hidden; 
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -113,6 +118,18 @@ header {
     width: 100%; 
 }
 
+.dashbord-section {
+    padding: 20px;
+}
+
+.dashbord-section h1 {
+    background-color: #CCCCCC;
+    padding: 15px;
+    font-size: 24px;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
 /* Conteúdo principal */
 .main-content {
     padding: 20px;
@@ -148,4 +165,22 @@ header {
     border-radius: 8px;
     padding: 20px;
     height: 200px;
+}
+
+.dashboard-card {
+    background-color: #FFFFFF; 
+    border: 1px solid #BDBDBD;
+    border-radius: 8px; 
+    padding: 20px; 
+    margin: 20px 0;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
+}
+
+.dashboard-card h3 {
+    margin-bottom: 10px; 
+}
+
+.dashboard-card p {
+    font-size: 14px; 
+    color: #333; 
 }
