--- a/Projeto/Frontend/GlassHub/GlassHubApp/templates/dashbord.html
+++ b/Projeto/Frontend/GlassHub/GlassHubApp/templates/dashbord.html
@@ -20,6 +20,9 @@
         </div>
     </header>
 
+    <section class="dashbord-section">
+        <h1>Dashbord</h1>
+
     <!-- Conteúdo principal -->
     <section class="main-content" id="mainContent">
         <div class="top-banner">
