Correção do campo de Login

--- a/Projeto/Frontend/GlassHub/GlassHubApp/templates/login.html
+++ b/Projeto/Frontend/GlassHub/GlassHubApp/templates/login.html
@@ -22,6 +22,10 @@
                     <input type="username" id="username" name="username" required placeholder="Nome"> 
                 </div>
                 <div class="input-group">
+                    <i class="fas fa-envelope"></i>
+                    <input type="email" id="email" name="email" required placeholder="Email" autocomplete="new-email">
+                </div>
+                <div class="input-group">
                     <i class="fas fa-lock"></i> 
                     <input type="password" id="password" name="password" required placeholder="Senha"> 
                 </div>
