Botão sair com Logout da conta

--- a/Projeto/Frontend/GlassHub/GlassHubApp/templates/parametrizacao.html
+++ b/Projeto/Frontend/GlassHub/GlassHubApp/templates/parametrizacao.html
@@ -27,7 +27,7 @@
             <li><a href="{% url 'faturamento' %}">Faturamento</a></li>
             <li><a href="{% url 'monitoramento' %}">Monitoramento</a></li>
             <li><a href="{% url 'parametrizacao' %}">Parametrização</a></li>
-            <li><a href="{% url 'login' %}">Sair</a></li>
+            <li><a href="{% url 'logout' %}">Sair</a></li>
         </ul>
     </nav>
 
