--- a/Projeto/Frontend/GlassHub/GlassHubApp/templates/dashbord.html
+++ b/Projeto/Frontend/GlassHub/GlassHubApp/templates/dashbord.html
@@ -23,21 +23,33 @@
     <section class="dashbord-section">
         <h1>Dashbord</h1>
 
-    <!-- Conteúdo principal -->
-    <section class="main-content" id="mainContent">
-        <div class="top-banner">
-            <img src="{% static 'banner.png' %}" alt="Banner" class="banner-img">
-        </div>
-        <div class="grid-container">
-            <!-- Add content for each grid item -->
-            <div class="grid-item">Gráfico 1</div>
-            <div class="grid-item">Gráfico 2</div>
-            <div class="grid-item">Gráfico 3</div>
-            <div class="grid-item">Gráfico 4</div>
-            <div class="grid-item">Gráfico 5</div>
-            <div class="grid-item">Gráfico 6</div>
-        </div>
-    </section>
+        <!-- Conteúdo principal -->
+        <section class="main-content" id="mainContent">
+            <div class="top-banner">
+                <img src="{% static 'banner.png' %}" alt="Banner" class="banner-img">
+            </div>
+
+            <div class="grid-container">
+                <div class="grid-item">
+                    {{ grafico1|safe }}
+                </div>
+                <div class="grid-item">
+                    {{ grafico2|safe }}
+                </div>
+                <div class="grid-item">
+                    {{ grafico3|safe }}
+                </div>
+                <div class="grid-item">
+                    {{ grafico4|safe }}
+                </div>
+                <div class="grid-item">
+                    {{ grafico5|safe }}
+                </div>
+                <div class="grid-item">
+                    {{ grafico6|safe }}
+                </div>
+            </div>
+        </section>
 
     <!-- Menu lateral -->
     <nav class="slider-menu" id="sliderMenu">
