--- a/Projeto/Frontend/GlassHub/GlassHubApp/static/style_dashbord.css
+++ b/Projeto/Frontend/GlassHub/GlassHubApp/static/style_dashbord.css
@@ -163,8 +163,16 @@ header {
     background-color: #E9E9E9E9;
     border: 1px solid #BDBDBD;
     border-radius: 8px;
-    padding: 20px;
-    height: 200px;
+    padding: 10px; /* Reduzido para mover os gráficos mais para cima */
+    height: 300px; /* Aumentar a altura dos cartões */
+    overflow: hidden;
+    display: flex;
+    align-items: flex-start; /* Move o conteúdo para o topo */
+}
+
+.grid-item > div {
+    width: 100%;
+    height: 100%;
 }
 
 .dashboard-card {
