--- a/Projeto/Frontend/GlassHub/GlassHubApp/templates/dashbord.html
+++ b/Projeto/Frontend/GlassHub/GlassHubApp/templates/dashbord.html
@@ -25,35 +25,36 @@
 
             <!-- Conteúdo principal -->
             <section class="main-content" id="mainContent">
-                <div>
+                <div class="small-graph">
                     {{ graph7|safe }}
                 </div>
-                
+            
                 <div class="grid-container">
-                    <div>
+                    <div class="graph-a">
                         {{ graph1|safe }}
                     </div>
-                    
-                    <div>
+                
+                    <div class="graph-b">
                         {{ graph2|safe }}
                     </div>
                 
-                    <div>
+                    <div class="graph-c">
                         {{ graph3|safe }}
                     </div>
                 
-                    <div>
+                    <div class="graph-d">
                         {{ graph4|safe }}
                     </div>
                 
-                    <div>
+                    <div class="graph-e">
                         {{ graph5|safe }}
                     </div>
                 
-                    <div>
+                    <div class="graph-f">
                         {{ graph6|safe }}
                     </div>
                 </div>
+                
             </section>
 
         <!-- Menu lateral -->
