--- a/Projeto/Frontend/GlassHub/GlassHubApp/templates/dashbord.html
+++ b/Projeto/Frontend/GlassHub/GlassHubApp/templates/dashbord.html
@@ -25,36 +25,35 @@
 
             <!-- Conteúdo principal -->
             <section class="main-content" id="mainContent">
-                <div class="small-graph">
+                <div>
                     {{ graph7|safe }}
                 </div>
-            
+                
                 <div class="grid-container">
-                    <div class="graph-a">
+                    <div>
                         {{ graph1|safe }}
                     </div>
-                
-                    <div class="graph-b">
+                    
+                    <div>
                         {{ graph2|safe }}
                     </div>
                 
-                    <div class="graph-c">
+                    <div>
                         {{ graph3|safe }}
                     </div>
                 
-                    <div class="graph-d">
+                    <div>
                         {{ graph4|safe }}
                     </div>
                 
-                    <div class="graph-e">
+                    <div>
                         {{ graph5|safe }}
                     </div>
                 
-                    <div class="graph-f">
+                    <div>
                         {{ graph6|safe }}
                     </div>
                 </div>
-                
             </section>
 
         <!-- Menu lateral -->
