Favo icon e algumas melhorias

--- a/Projeto/Frontend/GlassHub/GlassHubApp/templates/dashbord.html
+++ b/Projeto/Frontend/GlassHub/GlassHubApp/templates/dashbord.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Temperlândia | Dashbord</title>
         <link rel="stylesheet" href="{% static 'style_dashbord.css' %}">
+        <link rel="icon" type="image/png" href="{% static 'favoicon.png'%}">
     </head>
     <body>
 
