--- a/Projeto/Frontend/GlassHub/GlassHubApp/templates/monitoramento.html
+++ b/Projeto/Frontend/GlassHub/GlassHubApp/templates/monitoramento.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temperlândia | Monitoramento</title>
     <link rel="stylesheet" href="{% static 'style_monitoramento.css' %}">
+    <link rel="icon" type="image/png" href="{% static 'favoicon.png'%}">
 </head>
 <body>
 
