--- a/Projeto/Frontend/GlassHub/GlassHubApp/templates/registro.html
+++ b/Projeto/Frontend/GlassHub/GlassHubApp/templates/registro.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{% static 'style_registro.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="{% static 'favoicon.png'%}">
 </head>
 <body>
     <div class="container">
