--- a/Projeto/Frontend/GlassHub/GlassHubApp/templates/dashbord.html
+++ b/Projeto/Frontend/GlassHub/GlassHubApp/templates/dashbord.html
@@ -7,6 +7,7 @@
         <title>Temperlândia | Dashbord</title>
         <link rel="stylesheet" href="{% static 'style_dashbord.css' %}">
         <link rel="icon" type="image/png" href="{% static 'favoicon.png'%}">
+        <link rel="icon" type="image/png" href="http://www.temperlandia.com.br/images/favicon.png">
     </head>
     <body>
 
