--- a/Projeto/Frontend/GlassHub/GlassHubApp/templates/alarmes.html
+++ b/Projeto/Frontend/GlassHub/GlassHubApp/templates/alarmes.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temperlândia | Alarmes</title>
     <link rel="stylesheet" href="{% static 'style_alarmes.css' %}">
-    <link rel="icon" type="image/png" href="{% static 'favoicon.png'%}">
+    <link rel="icon" type="image/png" href="http://www.temperlandia.com.br/images/favicon.png">
 </head>
 <body>
 
