--- a/Projeto/Frontend/GlassHub/GlassHubApp/templates/faturamento.html
+++ b/Projeto/Frontend/GlassHub/GlassHubApp/templates/faturamento.html
@@ -9,8 +9,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-    <link rel="icon" type="image/png" href="{% static 'favoicon.png'%}">
-
+    <link rel="icon" type="image/png" href="http://www.temperlandia.com.br/images/favicon.png">
 </head>
 <body>
 
