--- a/Projeto/Frontend/GlassHub/GlassHubApp/templates/dashbord.html
+++ b/Projeto/Frontend/GlassHub/GlassHubApp/templates/dashbord.html
@@ -26,7 +26,7 @@
         <h1>Dashbord</h1>
 
         <!-- Exibição dos dados recebidos -->
-        <div class="data-display">
+        <div id="logs" class="data-display">
             {% for evento in eventos %}
                 <div class="evento">
                     <p>Setor: {{ evento.sector }}</p>
@@ -48,7 +48,7 @@
             <div class="grid-container">
                 <div id="graph1"></div>  <!-- Elemento para o gráfico de eventos -->
                 <script>
-                    const eventos = {{ eventos|safe }};  // Passando dados de eventos para JavaScript
+                     const eventos = JSON.parse('{{ eventos|safe }}'); 
                         
                     const dataEventos = eventos.map(evento => evento.date);
                     const valorEventos = eventos.map(evento => evento.max_idle || 0); // Usando max_idle ou 0 se não existir
@@ -134,7 +134,22 @@
             }
 
             setInterval(updateDateTime, 1000);
-            updateDateTime(); 
+            updateDateTime();
+
+            const socket = new WebSocket('ws://localhost:8000/ws/eventos/');
+
+            socket.onopen = function(e) {
+                console.log("Conectado ao WebSocket!");
+            };
+
+            socket.onmessage = function(e) {
+                const data = JSON.parse(e.data);
+                console.log(data.mensagem);
+            };
+
+            socket.onclose = function(e) {
+                console.log("Desconectado do WebSocket.");
+            };
         </script>
     </body>
 </html>
