--- a/Projeto/Frontend/GlassHub/GlassHubApp/static/style_alarmes.css
+++ b/Projeto/Frontend/GlassHub/GlassHubApp/static/style_alarmes.css
@@ -52,18 +52,18 @@ header {
 .slider-menu {
     position: fixed;
     top: 68px;
-    left: -200px; 
+    left: -200px; /* Posição inicial oculta */
     width: 200px;
     height: 100%;
     background-color: #FFB41C;
-    transition: left 0.3s ease; 
+    transition: left 0.3s ease; /* Animação suave */
     align-items: center; 
     justify-content: center;
     overflow: hidden; 
 }
 
 .slider-menu.open {
-    left: 0; 
+    left: 0; /* Exibe o menu ao aplicar a classe 'open' */
 }
 
 .slider-menu ul {
@@ -86,9 +86,6 @@ header {
     border-radius: 5px; 
     font-size: 14px; 
     margin-bottom: 10px; 
-    color: #FFFFFF;
-    justify-content: center; 
-    align-items: center;
     text-align: center; 
 }
 
@@ -107,6 +104,16 @@ header {
     color: #FFFFFF; 
     text-decoration: none; 
     width: 100%; 
+}
+
+/* Conteúdo principal */
+.main-content {
+    padding: 20px;
+    transition: margin-left 0.3s ease; /* Adiciona transição para o conteúdo principal */
+}
+
+.main-content.shifted {
+    margin-left: 200px; /* Ajusta o deslocamento quando o menu está aberto */
 }
 
 /* Alarme Section */
